# task1

./: .gitmodules
task1/: run.sh
task2/: CMakeLists.txt
task2/A/: preparing.py
task2/B/: CMakeLists.txt  lib.cpp
task2/C/: main.cpp  main_test.cpp  main_test.h
task2/C/googletest_dir/trunk/.svn/: wc.db
task3/: CMakeLists.txt
task3/src/: CMakeLists.txt
